<resources>
    <string name="app_name">DroidBountyHunter</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_capturados">Capturados</string>
    <string name="title_fugitivos">Fugitivos</string>
    <string name="title_acercade">Acerca de...</string>
    <string name="menu_agregar">Agregar</string>
    <string name="boton_guardar">Guardar</string>
    <string name="boton_capturar">Capturar</string>
    <string name="boton_eliminar">Eliminar</string>
    <string name="campo_nombre">Nombre del Fugitivo</string>
    <string name="title_activity_agregar">Nuevo Fugitivo</string>
    <string name="title_activity_detalle">Detalle Fugitivo</string>
    <string name="add_websrvice">Add WebService</string>
    <string name="boton_foto">Tomar foto</string>
    <string name="boton_agregarxml">ADD XML</string>
    <string name="btn_OpenGL">Foto OpenGL</string>
    <string name="distorsion">Distorsión</string>
    <string name="imagen_default">Imagen Default</string>
</resources>


