<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|top"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/mensajeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="Mensaje..."/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/pictureFugitive"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        android:minHeight="200dp"
        android:minWidth="200dp"
        android:src="@android:drawable/ic_menu_gallery"

        />

    <Button
        android:id="@+id/buttonCapturar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="OnCaptureClick"
        android:text="@string/boton_capturar"/>

    <Button
        android:id="@+id/buttonEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnDeleteClick"
        android:text="@string/boton_eliminar"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonPhoto"
        android:text="@string/boton_foto"
        android:onClick="OnFotoClick"
        />

    <Button
        android:id="@+id/btnOpenGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_OpenGL"
        android:onClick="OnOpenGL"
        />

    <EditText
        android:id="@+id/txtDistorsion"
        android:layout_gravity="center_horizontal"
        android:maxWidth="150dp"
        android:minWidth="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/distorsion"
        android:maxLength="10"
        />

    <CheckBox
        android:id="@+id/checkDefault"
        android:layout_marginTop="12dp"
        android:text="@string/imagen_default"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>