<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:gravity="center|top">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minWidth="150dp"
        android:maxWidth="150dp"
        android:layout_marginTop="100dp"
        android:hint="Nombre" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="OnSaveClick"
        android:text="@string/boton_guardar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:onClick="OnWebServiceClick"
        android:text="@string/add_websrvice"
        android:id="@+id/buttonAddWebService"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:onClick="OnXMLClick"
        android:text="@string/boton_agregarxml"
        android:id="@+id/buttonAddXML"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtProgreso"
        android:layout_marginTop="20dp"
        android:text="Progreso..."
        />
    
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginTop="6dp"
        />

</LinearLayout>